# drug-discovery-pipeline

./: .dockerignore  .env.example  .gitignore  Dockerfile  ESRRG.md  PERTURBATION_PLAN.md  PROJECT_HANDOFF.md  Procfile  README.md  SETUP_GUIDE.md  STRATEGIC_REVIEW.md  custom_with_pdb.yaml  docker-compose.yml  pyproject.toml  railway.json  requirements.txt  run_server.py  update0302.md  updates0227.md
configs/: defaults.yaml
drugdiscovery/: __init__.py  __main__.py  config.py  pipeline.py  types.py
drugdiscovery/databases/: __init__.py  bindingdb.py  chembl.py  coconut.py  drugbank.py  opentargets.py  peptide_dbs.py  pubchem_db.py  zinc22.py
drugdiscovery/modules/: __init__.py  admet.py  de_novo_peptide.py  de_novo_sm.py  delivery.py  docking.py  library_screening.py  modifications.py  perturbation.py  reporting.py  scoring.py  structure_pred.py  target_prep.py
drugdiscovery/tools/: admetlab3.py  boltz.py  cmap_client.py  colabfold.py  deepdta.py  diffdock.py  diffpepbuilder.py  gnina.py  pepmlm.py  pocket_detection.py  posecheck_tool.py  pubchem.py  string_ppi.py  vina.py
drugdiscovery/utils/: chemistry.py  compute.py  io.py  web.py
service/: __init__.py  app.py  auth.py  comparison.py  config.py  database.py  dependencies.py  file_manager.py  log_streamer.py  models.py  portone.py  pubchem_enrichment.py  scheduler.py  schemas.py  worker.py
service/routers/: auth_router.py  compare_router.py  health_router.py  jobs_router.py  results_router.py  subscription_router.py
service/static/: index.html
service/static/css/: components.css  design-tokens.css  layout.css  pages.css  pricing.css
service/static/js/: api.js  app.js  router.js
service/static/js/pages/: compare.js  job-dashboard.js  job-detail.js  job-submit.js  jobs-gallery.js  landing.js  login.js  pricing.js  register.js
tests/: test_admet.py  test_admet_aggregate.py  test_bindingdb.py  test_chemistry.py  test_config.py  test_de_novo_sm.py  test_io.py  test_opentargets.py  test_perturbation.py  test_pubchem.py  test_pubchem_db.py  test_scoring.py  test_types.py
tests_service/: conftest.py  test_auth.py  test_compare.py  test_jobs.py  test_results.py
